<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.praveen_sangalad.inclass03.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_yourorder"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_order_new"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_price_string"
        android:id="@+id/textView3"
        android:textIsSelectable="false"
        android:textSize="22dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView7"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_alignBottom="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_basepriceValue"
        android:id="@+id/basePrice"
        android:textSize="22dp"
        android:layout_above="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_dollar"
        android:id="@+id/textView8"
        android:textSize="22dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Toppings_string"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView7"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginTop="36dp"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_toppingsPrice"
        android:id="@+id/topPrice"
        android:textSize="22dp"
        android:layout_above="@+id/textView10"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_dollar"
        android:id="@+id/textView9"
        android:textSize="22dp"
        android:layout_above="@+id/textView10"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_cost_string"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/basePrice"
        android:layout_alignEnd="@+id/basePrice"
        android:layout_marginTop="132dp"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_deliveryPrice"
        android:id="@+id/dPrice"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_dollar"
        android:id="@+id/textView12"
        android:layout_alignBottom="@+id/dPrice"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_total"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_Price"
        android:id="@+id/totalPrice"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignLeft="@+id/dPrice"
        android:layout_alignStart="@+id/dPrice"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_dollar"
        android:id="@+id/textView15"
        android:layout_alignTop="@+id/totalPrice"
        android:layout_alignRight="@+id/textView12"
        android:layout_alignEnd="@+id/textView12"
        android:textSize="22dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFinish"
        android:id="@+id/finishButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />

</RelativeLayout>